RMAB se configuro para la conexion con eureka server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,27 @@
 spring.application.name=cloud_api_gw
+server.port=8080
 spring.cloud.gateway.discovery.locator.enabled=true
-
-spring.cloud.gateway.routes[0].id=eureka-server
-spring.cloud.gateway.routes[0].uri=lb://eureka-server
-spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/**
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# spring.cloud.gateway.routes[0].id=eureka-server
+# spring.cloud.gateway.routes[0].uri=lb://eureka-server
+# spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/**
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
+eureka.instance.prefer-ip-address=true
+eureka.client.healthcheck.enabled=true
+# eureka.client.register-with-eureka=true
+# eureka.client.fetch-registry=true
 logging.level.org.springframework.cloud.gateway=DEBUG
-
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
+
+
+spring.cloud.gateway.routes[0].id=gradle-client
+spring.cloud.gateway.routes[0].uri=lb://gradle-client
+spring.cloud.gateway.routes[0].predicates[0]=Path=/gradle-client/**
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/gradle-client/(?<segment>.*), /${segment}
+
+spring.cloud.gateway.routes[1].id=eureka-client
+spring.cloud.gateway.routes[1].uri=lb://eureka-client
+spring.cloud.gateway.routes[1].predicates[0]=Path=/eureka-client/**
+spring.cloud.gateway.routes[1].filters[0]=RewritePath=/eureka-client/(?<segment>.*), /${segment}
