--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,33 @@
 spring.application.name=cloud_api_gw
 server.port=8080
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 # spring.cloud.gateway.routes[0].id=eureka-server
 # spring.cloud.gateway.routes[0].uri=lb://eureka-server
 # spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/**
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
-eureka.client.healthcheck.enabled=true
+
 # eureka.client.register-with-eureka=true
 # eureka.client.fetch-registry=true
-logging.level.org.springframework.cloud.gateway=DEBUG
+
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+eureka.client.healthcheck.enabled=true
 management.endpoint.gateway.enabled=true
+# Configuración de la ruta para STOCKQUERYSERVICE
+# Configuración de la ruta para STOCKQUERYSERVICE
+spring.cloud.gateway.routes[0].id=stockqueryservice
+spring.cloud.gateway.routes[0].uri=lb://StockQueryService
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/products/**
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/api/v1/products/(?<segment>.*), /api/v1/products/${segment}
+# spring.cloud.gateway.routes[1].id=eureka-client
+# spring.cloud.gateway.routes[1].uri=lb://eureka-client
+# spring.cloud.gateway.routes[1].predicates[0]=Path=/eureka-client/**
+# spring.cloud.gateway.routes[1].filters[0]=RewritePath=/eureka-client/(?<segment>.*), /${segment}
 
-
-spring.cloud.gateway.routes[0].id=gradle-client
-spring.cloud.gateway.routes[0].uri=lb://gradle-client
-spring.cloud.gateway.routes[0].predicates[0]=Path=/gradle-client/**
-spring.cloud.gateway.routes[0].filters[0]=RewritePath=/gradle-client/(?<segment>.*), /${segment}
-
-spring.cloud.gateway.routes[1].id=eureka-client
-spring.cloud.gateway.routes[1].uri=lb://eureka-client
-spring.cloud.gateway.routes[1].predicates[0]=Path=/eureka-client/**
-spring.cloud.gateway.routes[1].filters[0]=RewritePath=/eureka-client/(?<segment>.*), /${segment}
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
