--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,17 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/suppliers/**
 spring.cloud.gateway.routes[2].filters[0]=RewritePath=/api/v1/suppliers/(?<segment>.*), /api/v1/suppliers/${segment}
 
 
+# Routes for OrderService
+spring.cloud.gateway.routes[3].id=operationservice-orders
+spring.cloud.gateway.routes[3].uri=lb://OperationService
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/orders/**
+spring.cloud.gateway.routes[3].filters[0]=RewritePath=/api/v1/orders/(?<segment>.*), /api/v1/orders/${segment}
 
+# Routes for SalesService
+spring.cloud.gateway.routes[4].id=operationservice-sales
+spring.cloud.gateway.routes[4].uri=lb://OperationService
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/sales/**
+spring.cloud.gateway.routes[4].filters[0]=RewritePath=/api/v1/sales/(?<segment>.*), /api/v1/sales/${segment}
 
 # spring.cloud.gateway.routes[0].id=eureka-server
 # spring.cloud.gateway.routes[0].uri=lb://eureka-server
