--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,21 @@
 spring.application.name=cloud_api_gw
 server.port=8080
+
+#eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
+eureka.client.healthcheck.enabled=true
+
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+#management
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
-eureka.client.healthcheck.enabled=true
 management.endpoint.gateway.enabled=true
-# Configuración de la ruta para STOCKQUERYSERVICE
+
+
+# Configuración de la ruta para StockQueryService
 spring.cloud.gateway.routes[0].id=stockqueryservice-products
 spring.cloud.gateway.routes[0].uri=lb://StockQueryService
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/products/**
@@ -25,7 +31,7 @@ spring.cloud.gateway.routes[2].uri=lb://StockQueryService
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/suppliers/**
 spring.cloud.gateway.routes[2].filters[0]=RewritePath=/api/v1/suppliers/(?<segment>.*), /api/v1/suppliers/${segment}
 
-
+# Configuración de la ruta para StockOperationService
 # Routes for OrderService
 spring.cloud.gateway.routes[3].id=operationservice-orders
 spring.cloud.gateway.routes[3].uri=lb://StockOperationService
@@ -38,15 +44,11 @@ spring.cloud.gateway.routes[4].uri=lb://StockOperationService
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/sales/**
 spring.cloud.gateway.routes[4].filters[0]=RewritePath=/api/v1/sales/(?<segment>.*), /api/v1/sales/${segment}
 
-# spring.cloud.gateway.routes[0].id=eureka-server
-# spring.cloud.gateway.routes[0].uri=lb://eureka-server
-# spring.cloud.gateway.routes[0].predicates[0]=Path=/eureka/**
-# eureka.client.register-with-eureka=true
-# eureka.client.fetch-registry=true
-# spring.cloud.gateway.routes[1].id=eureka-client
-# spring.cloud.gateway.routes[1].uri=lb://eureka-client
-# spring.cloud.gateway.routes[1].predicates[0]=Path=/eureka-client/**
-# spring.cloud.gateway.routes[1].filters[0]=RewritePath=/eureka-client/(?<segment>.*), /${segment}
-
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.reactor.netty.http.client=DEBUG
+
+
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=http://localhost:5173
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
