Updates Cloud gw

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ eureka.client.healthcheck.enabled=true
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#usaremos minúsculas
 
 #management
 management.endpoints.web.exposure.include=*
@@ -17,32 +18,37 @@ management.endpoint.gateway.enabled=true
 
 # Configuración de la ruta para StockQueryService
 spring.cloud.gateway.routes[0].id=stockqueryservice-products
-spring.cloud.gateway.routes[0].uri=lb://StockQueryService
+spring.cloud.gateway.routes[0].uri=lb://stockqueryservice
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/products/**
 spring.cloud.gateway.routes[0].filters[0]=RewritePath=/api/v1/products/(?<segment>.*), /api/v1/products/${segment}
 
 spring.cloud.gateway.routes[1].id=stockqueryservice-customers
-spring.cloud.gateway.routes[1].uri=lb://StockQueryService
+spring.cloud.gateway.routes[1].uri=lb://stockqueryservice
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/customers/**
 spring.cloud.gateway.routes[1].filters[0]=RewritePath=/api/v1/customers/(?<segment>.*), /api/v1/customers/${segment}
 
 spring.cloud.gateway.routes[2].id=stockqueryservice-suppliers
-spring.cloud.gateway.routes[2].uri=lb://StockQueryService
+spring.cloud.gateway.routes[2].uri=lb://stockqueryservice
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/suppliers/**
 spring.cloud.gateway.routes[2].filters[0]=RewritePath=/api/v1/suppliers/(?<segment>.*), /api/v1/suppliers/${segment}
 
 # Configuración de la ruta para StockOperationService
 # Routes for OrderService
 spring.cloud.gateway.routes[3].id=operationservice-orders
-spring.cloud.gateway.routes[3].uri=lb://StockOperationService
+spring.cloud.gateway.routes[3].uri=lb://stockoperationservice
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/orders/**
 spring.cloud.gateway.routes[3].filters[0]=RewritePath=/api/v1/orders/(?<segment>.*), /api/v1/orders/${segment}
 
 # Routes for SalesService
 spring.cloud.gateway.routes[4].id=operationservice-sales
-spring.cloud.gateway.routes[4].uri=lb://StockOperationService
+spring.cloud.gateway.routes[4].uri=lb://stockoperationservice
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/sales/**
 spring.cloud.gateway.routes[4].filters[0]=RewritePath=/api/v1/sales/(?<segment>.*), /api/v1/sales/${segment}
+
+spring.cloud.gateway.routes[5].id=userauthservice-auth
+spring.cloud.gateway.routes[5].uri=lb://userauthservice
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/v1/login,/api/v1/renewToken,/api/v1/logout,/api/v1/register
+
 
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.reactor.netty.http.client=DEBUG
