--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=cloud_api_gw
 server.port=8080
 
 #eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
 eureka.client.healthcheck.enabled=true
 
