--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,9 +45,22 @@ spring.cloud.gateway.routes[4].uri=lb://stockoperationservice
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/sales/**
 spring.cloud.gateway.routes[4].filters[0]=RewritePath=/api/v1/sales/(?<segment>.*), /api/v1/sales/${segment}
 
-spring.cloud.gateway.routes[5].id=userauthservice-auth
+# --- UserAuthService (4 rutas) ---
+spring.cloud.gateway.routes[5].id=userauth-login
 spring.cloud.gateway.routes[5].uri=lb://userauthservice
-spring.cloud.gateway.routes[5].predicates[0]=Path=/api/v1/login,/api/v1/renewToken,/api/v1/logout,/api/v1/register
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/v2/login
+
+spring.cloud.gateway.routes[6].id=userauth-renew
+spring.cloud.gateway.routes[6].uri=lb://userauthservice
+spring.cloud.gateway.routes[6].predicates[0]=Path=/api/v2/renewToken
+
+spring.cloud.gateway.routes[7].id=userauth-logout
+spring.cloud.gateway.routes[7].uri=lb://userauthservice
+spring.cloud.gateway.routes[7].predicates[0]=Path=/api/v2/logout
+
+spring.cloud.gateway.routes[8].id=userauth-register
+spring.cloud.gateway.routes[8].uri=lb://userauthservice
+spring.cloud.gateway.routes[8].predicates[0]=Path=/api/v2/register
 
 
 logging.level.org.springframework.cloud.gateway=DEBUG
@@ -58,3 +71,7 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-origins=http:/
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowed-headers=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allow-credentials=true
+
+
+security.jwt.secret=${SECURITY_JWT_SECRET}
+auth.cookie.name=ACCESS_TOKEN
