--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-jose</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
